Bug 114503 - [BlackBerry] Crash running layout tests
Summary: [BlackBerry] Crash running layout tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit BlackBerry (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
: 113369 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-12 05:09 PDT by Carlos Garcia Campos
Modified: 2013-04-14 20:13 PDT (History)
5 users (show)

See Also:


Attachments
Patch (1.52 KB, patch)
2013-04-12 05:11 PDT, Carlos Garcia Campos
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2013-04-12 05:09:39 PDT
Hit an assertion in ~GuardedPointerBase when DRT is deleted. DumpRenderTree class derives from BlackBerry::Platform::LayoutTestClient that derives from BlackBerry::Platform::GuardedPointerBase, so the DRT pointer should no be released with delete but with BlackBerry::Platform::deleteGuardedObject().
Comment 1 Carlos Garcia Campos 2013-04-12 05:11:38 PDT
Created attachment 197746 [details]
Patch
Comment 2 Xan Lopez 2013-04-12 06:16:27 PDT
Comment on attachment 197746 [details]
Patch

Makes sense.
Comment 3 WebKit Commit Bot 2013-04-12 07:03:02 PDT
The commit-queue encountered the following flaky tests while processing attachment 197746 [details]:

platform/mac/editing/deleting/deletionUI-single-instance.html bug 114181 (author: rniwa@webkit.org)
transitions/color-transition-rounding.html bug 114182 (author: simon.fraser@apple.com)
transitions/cubic-bezier-overflow-svg-length.html bug 114183 (author: peter@chromium.org)
transitions/interrupt-zero-duration.html bug 114184 (authors: cmarrin@apple.com, rniwa@webkit.org, and simon.fraser@apple.com)
transitions/multiple-background-transitions.html bug 114185 (author: simon.fraser@apple.com)
transitions/cubic-bezier-overflow-color.html bug 114186 (author: peter@chromium.org)
transitions/multiple-shadow-transitions.html bug 114187 (author: simon.fraser@apple.com)
transitions/mismatched-shadow-transitions.html bug 114188 (author: simon.fraser@apple.com)
transitions/color-transition-all.html bug 114189 (authors: ossy@webkit.org and simon.fraser@apple.com)
transitions/cubic-bezier-overflow-shadow.html bug 114191 (author: peter@chromium.org)
transitions/min-max-width-height-transitions.html bug 114192 (author: simon.fraser@apple.com)
transitions/cancel-transition.html bug 114193 (authors: ojan@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com)
transitions/border-radius-transition.html bug 114194 (author: simon.fraser@apple.com)
transitions/flex-transitions.html bug 114195 (author: tony@chromium.org)
transitions/mixed-type.html bug 114196 (author: mikelawther@chromium.org)
transitions/multiple-mask-transitions.html bug 114197 (author: simon.fraser@apple.com)
transitions/color-transition-premultiplied.html bug 114198 (author: simon.fraser@apple.com)
transitions/mismatched-shadow-styles.html bug 114199 (author: simon.fraser@apple.com)
transitions/mask-transitions.html bug 114200 (authors: ojan@chromium.org, oliver@apple.com, and simon.fraser@apple.com)
transitions/cubic-bezier-overflow-length.html bug 114201 (author: peter@chromium.org)
transitions/multiple-background-size-transitions.html bug 114202 (authors: mitz@webkit.org and simon.fraser@apple.com)
transitions/clip-transition.html bug 114203 (authors: dglazkov@chromium.org and simon.fraser@apple.com)
transitions/cubic-bezier-overflow-transform.html bug 114204 (author: peter@chromium.org)
transitions/interrupted-accelerated-transition.html bug 56242 (authors: rniwa@webkit.org, simon.fraser@apple.com, and tonyg@chromium.org)
transitions/background-transitions.html bug 114206 (author: simon.fraser@apple.com)
http/tests/security/contentSecurityPolicy/shared-worker-connect-src-blocked.html bug 114509 (authors: mkwst@chromium.org, rniwa@webkit.org, and tsepez@chromium.org)
http/tests/security/contentSecurityPolicy/source-list-parsing-01.html bug 114510 (author: mkwst@chromium.org)
http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html bug 114208 (authors: abarth@webkit.org and rniwa@webkit.org)
http/tests/security/cookies/third-party-cookie-blocking-user-action.html bug 114511 (authors: ap@webkit.org, jochen@chromium.org, and rniwa@webkit.org)
fast/loader/javascript-url-in-object.html bug 114210 (authors: rniwa@webkit.org and sam@webkit.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2013-04-12 07:03:53 PDT
Comment on attachment 197746 [details]
Patch

Clearing flags on attachment: 197746

Committed r148277: <http://trac.webkit.org/changeset/148277>
Comment 5 WebKit Commit Bot 2013-04-12 07:03:58 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Xiaobo Wang 2013-04-14 20:13:12 PDT
*** Bug 113369 has been marked as a duplicate of this bug. ***